<?xml version="1.0"?>
<package format="3">
  <name>dvl_plane_fit</name>
  <version>0.0.1</version>
  <description>DVL plane fitting controller for ROS 2 + Gazebo</description>

  <maintainer email="mochaoh58@gmail.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>